--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-		<title>Immanuel Amirtharaj</title>
+		<title>Kayla Huffman</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta charset="UTF-8">
 
