--- a/index.html
+++ b/index.html
@@ -117,74 +117,25 @@
     
     <body>
         <div class="wrapper">
-            <h1>Immanuel Amirtharaj</h1>
+            <h1>Kayla Huffman</h1>
 
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
-                    I'm currently working as a client engineer at Apple where I develop features for the Maps app on iOS, macOS, watchOS, and visionOS. Prior to that I completed my bachelors and masters at Santa Clara University studying Computer Science and Engineering. I really love working on products that have a positive impact on people's daily lives. Outside of work, I'm interested in cycling, coffee, and reading a good book.
-                </div>
-            </div>
-            
-            <div class="sectionWrapper">
-                <h2>Technical Skills</h2>
-                <div>
-                    As an iOS engineer most of my experience is on Apple related platforms where I program in <span class = "darkBold">Objective C</span>, and <span class = "darkBold">Swift</span>. Most of my time is spent building reusable UI components using <span class = "darkBold">UIKit</span> and <span class = "darkBold">SwiftUI</span>. The portion of my time is spent modelling client/server interactions using <span class = "darkBold">Foundation</span>, <span class = "darkBold">protocol buffers</span> and <span class = "darkBold">JSON</span>.  During my time as a research assistant, I used <span class = "darkBold">C</span> and <span class = "darkBold">C++</span> for software development, <span class = "darkBold">Python</span> and <span class = "darkBold">Bash</span> for scripting, and <span class = "darkBold">Matlab</span> for data analysis.  I also have experience in building applications using <span class = "darkBold">Javascript</span>, <span class = "darkBold">Python</span>, and <span class = "darkBold">PHP</span> and have used frameworks like <span class = "darkBold">Express (Node JS)</span>, <span class = "darkBold">Flask</span>, <span class = "darkBold">React</span>, and <span class = "darkBold">Angular JS (1.0)</span>.
+                    I'm a student at Santa Clara University studying computer science and engineering. In my free time I enjoy swimming, reading, and baking. 
                 </div>
             </div>
 
             <div class="sectionWrapper">
-                <h2>Work Experience</h2>   
-                Currently I'm an client engineer on the Apple Maps team.  In the past I have worked as a:
+                <h2>Experience</h2>   
                 <br/>
                 <div>
-                    <span class="lightBold">Research assistant under <a href="http://behnam.dezfouli.com">Dr. Behnam Dezfouli</a></span> at the Internet of Things Laboratory<br/>
-                    <span class="lightBold">Teaching assistant</span> for the Computer Science Department at Santa Clara University<br/>
-                    <span class="lightBold">Software Engineering Intern</span> at FileMaker, an Apple Subsidiary<br/>
-                    <span class="lightBold">Software Engineering Intern</span> at WeatherSphere<br/>
-                    <span class="lightBold">Media Services Assistant</span> at Santa Clara University<br/>
-                    <span class="lightBold">Exhibit Explainer</span> at the Children's Discovery Museum of San Jose</li>
+                    <span class="lightBold">Web Applications Assistant</span> at Santa Clara University<br/>
+                    <span class="lightBold">Membership Services Representative</span> at Malley Fitness and Recreation<br/>
+                    <span class="lightBold">Mobile App Development Intern</span> at Modo Labs<br/>
+                    <span class="lightBold">Active Member/Pledge Class President</span> at Alpha Kappa Psi<br/>
                 </div>
             </div>
-
-            <div class="sectionWrapper">
-                <h2>Products I've Worked On</h2>
-                <a href="https://www.apple.com/maps/">Apple Maps</a> - Building features for the best mapping app on iOS.
-                <br/>
-                <a href="https://github.com/SIOTLAB/empiot">EMPIOT</a> - A cost effective and accurate energy measurement platform for IoT devices.
-                <br/>
-        		<a href="https://itunes.apple.com/us/app/filemaker-go-16/id1097917885?mt=8">FileMaker Go 16</a> - Worked on the OAuth 2.0 feature for users to log in via 3rd party accounts.
-        		<br/>
-            </div>
-
-            <div class="sectionWrapper">
-                <h2>Side Projects</h2>
-                <a href="https://today.lilwizeguy.me">Today</a> - A dashboard to keep you up to date on news, stocks, and weather for the day. Written using React, Express, and Node JS. 
-                <br/>
-                <a href="https://github.com/lilwizeguy/HIIT-Sessions">HIIT Sessions</a> - A High Interval Intensity timer written in Swift. No longer on the App Store because I currently work for Apple.
-                <br/>
-                <a href="http://notes.lilwizeguy.me">Class Notes</a> - Web app I made to create and share my class notes
-                <br/>
-            </div>
-
-            <div class="sectionWrapper">
-                <h2>Patents & Publications</h2>
-                <a href="https://patents.google.com/patent/US20200378785A1/en?inventor=Immanuel+Amirtharaj&oq=Immanuel+Amirtharaj">User Feedback Interfaces for Map Location Entry Points</a> - UI for reporting entrances for places. Released in iOS 13.
-                <br/>
-                <a href="https://www.sciencedirect.com/science/article/pii/S1084804518302479">EMPIOT</a> - Energy measurement platform for IoT devices.  Cost effective, flexible, and accurate. <a href="https://arxiv.org/pdf/1804.04794.pdf">Full text here</a>.
-                <br/>
-                <a href="https://link.springer.com/article/10.1007/s12652-019-01197-2">Profiling and Improving the Duty-Cycling Performance of Linux-based IoT Devices</a> - Profiled the overhead of boot time by analyzing user space processes.  Able to extend this by splitting and a complex task (i.e. taking a picture and uploading it) while the device is booting up. <a href="https://arxiv.org/pdf/1808.10097.pdf">Full text here</a>.
-                <br/>
-            </div>
-
-            <div class="sectionWrapper">
-                <h2>Contact</h2>
-                <a href="Images/resume.pdf">Resume</a>
-                <br/>
-                <a href="https://github.com/lilwizeguy">Github</a>
-                <br/>
-                <a href="https://linkedin.com/in/immanuel-amirtharaj-4661b053">LinkedIn</a>
-            </div>  
         </div>
     </body>
 </html>
