--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
             h1 {
                 font-weight: 500;
+                text-align: center;
             }
 
             h2 {
                 font-weight: 500;
+                text-align: center;
             }
 
             b {
