--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
             
             body {
-                font-family: 'Helvetica', sans-serif;  
+                font-family: 'Afacad', sans-serif;
                 font-size: 15pt;
                 line-height: 1.5;
                 color: #212121;
@@ -119,7 +119,7 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-
+            <img src="img_girl.jpg" alt="Kayla Huffman">
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
