--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
             
             body {
-                font-family: 'Afacad', sans-serif;
+                font-family: 'Lucida Console', monospace;
                 font-size: 15pt;
                 line-height: 1.5;
                 color: #212121;
@@ -88,7 +88,7 @@
             }
 
             body {
-                font-family: 'Helvetica', sans-serif;  
+                font-family: 'Lucida Console', monospace;  
                 font-size: 14px;
                 line-height: 1.5;
                 color: #383838;
@@ -104,7 +104,7 @@
             }
 
             body {
-                font-family: 'Helvetica', sans-serif;  
+                font-family: 'Lucida Console', monospace;  
                 font-size: 12px;
                 line-height: 1.5;
                 color: #383838;
@@ -119,7 +119,7 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-            <img src="img_girl.jpg" alt="Kayla Huffman">
+            <img src="profile.png" alt="Kayla Huffman">
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
