--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta charset="UTF-8">
 
-	    <script>
+	    <!-- <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-104759104-1', 'auto');
-		  ga('send', 'pageview');
+		  ga('send', 'pageview'); -->
 
 	</script>
         <style>
@@ -27,6 +27,10 @@
 
             b {
                 font-weight: 500;
+            }
+
+            img {
+                border-radius: 50%;
             }
             
             body {
