--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-            <img src="profile.png" alt="Kayla Huffman">
+            <img src="./Images/profile.png" alt="Kayla Huffman">
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
