--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
             img {
                 border-radius: 50%;
+                height: "100";
+                width: "100";
             }
             
             body {
@@ -123,7 +125,7 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-            <img src="./Images/profile.png" alt="Kayla Huffman">
+            <img src="./Images/profile.png" alt="Kayla">
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
