--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             img {
                 border-radius: 50%;
-                height: "100";
-                width: "100";
+                height: 200px;
+                width: 200px;
             }
             
             body {
@@ -142,6 +142,24 @@
                     <span class="lightBold">Active Member/Pledge Class President</span> at Alpha Kappa Psi<br/>
                 </div>
             </div>
+
+            <div class="sectionWrapper">
+                <h2>Technical Skills</h2>   
+                <div>
+                    <span class="lightBold">Coursework: </span> Object-Oriented Programming and Advanced Data Structures, Differential Equations, Logic Design, Discrete Math, Abstract Data Types and Data Structures, Calculus and Analytical Geometry III & IV
+                    <br/>
+                    <span class="lightBold">Skills: </span> C, C++, Java, Python, JavaScript, HTML, CSS, Node.js, Figma<br/>
+                </div>
+            </div>
+
+            <div class="sectionWrapper">
+                <h2>Additional Links</h2>   
+                <div>
+                    <span class="lightBold">Resume</span> at Santa Clara University<br/>
+                    <span class="lightBold">LinkedIn</span> at Malley Fitness and Recreation<br/>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
