--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta charset="UTF-8">
 
-	    <!-- <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-104759104-1', 'auto');
-		  ga('send', 'pageview'); -->
-
 	</script>
         <style>
 
@@ -33,6 +24,8 @@
                 border-radius: 50%;
                 height: 200px;
                 width: 200px;
+                margin-left: auto;
+                margin-right: auto;
             }
             
             body {
@@ -66,13 +59,6 @@
                 font-weight: 500;
                 color: #9e9e9e;
             }
-
-            .darkBold {
-                font-weight: 500;
-                color: #9e9e9e;
-            }
-
-
 
         @media screen and (min-width: 1201px) {
 
@@ -155,11 +141,13 @@
             <div class="sectionWrapper">
                 <h2>Additional Links</h2>   
                 <div>
-                    <span class="lightBold">Resume</span> at Santa Clara University<br/>
-                    <span class="lightBold">LinkedIn</span> at Malley Fitness and Recreation<br/>
+                    <a href="./Images/kaylaResume.png">Resume</a>
+                    <br/>
+                    <a href="https://github.com/khuffman39">Github</a>
+                    <br/>
+                    <a href="https://www.linkedin.com/in/kayla-huffman-b52a91172/">LinkedIn</a>
                 </div>
             </div>
-
         </div>
     </body>
 </html>
