--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 border-radius: 50%;
                 height: 200px;
                 width: 200px;
-                margin-left: auto;
-                margin-right: auto;
+                text-align: center;
             }
             
             body {
