--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
                 border-radius: 50%;
                 height: 200px;
                 width: 200px;
-                text-align: center;
             }
-            
+
+            .center {  
+                text-align: center; 
+            }
+
             body {
                 font-family: 'Lucida Console', monospace;
                 font-size: 15pt;
@@ -110,7 +113,9 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-            <img src="./Images/profile.png" alt="Kayla">
+            <p class="centreimage">
+                <img src="./Images/profile.png" alt="Kayla">
+            </p>
             <div class="sectionWrapper">
                 <h2>About Me</h2>
                 <div>
