--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <body>
         <div class="wrapper">
             <h1>Kayla Huffman</h1>
-            <p class="centreimage">
+            <p class="center">
                 <img src="./Images/profile.png" alt="Kayla">
             </p>
             <div class="sectionWrapper">
