beginning projects page

--- a/about.html
+++ b/about.html
@@ -39,16 +39,60 @@
                     <div class="container">
                         <h1 class="very-inset">Nice to meet you!</h1>
                         <div class="super-inset">
-                            <p>Outside of school, I enjoy exercising my creativity, exploring the outdoors, and staying active. Through this page, I hope you'll get an idea of who I am as a person.</p>
+                            <p>Outside of school, I enjoy exercising my creativity, exploring the outdoors, and staying active. Through this page, I hope you'll get an idea of who I am when screens are off.</p>
                         </div>
                     </div>
                 </section>
-                <section class="photo-cardset"
+                <section class="photo-cardset">
                     <div class="container">
                         <div class="about-gallery">
                             <figure class="about-image">
-                                <img src="climbing.png" alt>
-                                <figcaption class="alt-body">hellooooooo</figcaption>
+                                <img src="./Images/the lost coast.png" alt>
+                                <figcaption class="alt-body">Backpacking up the California coast</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/colchuck.png" alt>
+                                <figcaption class="alt-body">The view after hiking 5 miles up to Colchuk Lake, Washington</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/crater lake.png" alt>
+                                <figcaption class="alt-body">Visited the stunning Crater Lake with some friends</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+                <section class="photo-cardset1">
+                    <div class="container">
+                        <div class="about-gallery">
+                            <figure class="about-image">
+                                <img src="./Images/climbing.png" alt>
+                                <figcaption class="alt-body">I've recently started rock climbing and have been loving it!</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/rafting.png" alt>
+                                <figcaption class="alt-body">White water rafting in Oregon</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/swim.png" alt>
+                                <figcaption class="alt-body">I've been swimming for as long as I can remember and love being in the water</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+                <section class="photo-cardset">
+                    <div class="container">
+                        <div class="about-gallery">
+                            <figure class="about-image">
+                                <img src="./Images/painting.png" alt>
+                                <figcaption class="alt-body">Painting in my favorite cafe in Korea</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/miso.png" alt>
+                                <figcaption class="alt-body">My Japanese style risotto with seared salmon, a friend and family favorite</figcaption>
+                            </figure>
+                            <figure class="about-image">
+                                <img src="./Images/books.png" alt>
+                                <figcaption class="alt-body">I absolutely love reading, especially historical fiction and mystery</figcaption>
                             </figure>
                         </div>
                     </div>
