--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </nav>
                     </div>
                 </header>
-                <section class="introduction"
+                <section class="introduction">
                     <div class="container">
                         <div class="two-col">
                             <div class="very-inset">
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="contact-me"
+                <section class="contact-me">
                     <div class="container">
                         <h2 class="very-inset">Contact Me.</h2>
                         <div class="super-inset">
