--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                         </nav>
                     </div>
                 </header>
-                <section class="projects"
+                <section class="projects">
                     <div class="container">
                         <div class="two-col">
                             <div class="very-inset">
