layout for projects

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                         </nav>
                     </div>
                 </header>
-                <section class="greeting"
+                <section class="greeting"></section>
                     <div class="container">
                         <h1 class="very-inset">Nice to meet you!</h1>
                         <div class="super-inset">
