--- a/projects.html
+++ b/projects.html
@@ -35,15 +35,29 @@
                         </nav>
                     </div>
                 </header>
-                <section class="projects">
-                    <div class="container">
-                        <div class="two-col">
-                            <div class="very-inset">
-                                <h1>View some of my work!</h1>
-                            </div>
-                        </div>
-                    </div>
-                </section>
             </div>
+            <section class="projects-banner">
+                <div class="container">
+                    <h1 class="very-inset">Projects</h1>
+                    <div class="super-inset">
+                        <p>Outside of school, I enjoy exercising my creativity, exploring the outdoors, and staying active. Through this page, I hope you'll get an idea of who I am when screens are off.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="projects projects-grid double-line">
+                <div class="container">
+                    <ul>
+                        <li>
+                            <a href="mobileSCU.html"></a>
+                            <div class="image-container">
+                                <img src="/Images/olive.jpg" alt>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="ModoLabs.html"></a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </div>
     </body>
