--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/jly8dwo.css">
     </head>
     <body>
         <div class="outer-container"> 
@@ -35,7 +35,7 @@
                         </nav>
                     </div>
                 </header>
-                <section class="greeting"></section>
+                <section class="greeting">
                     <div class="container">
                         <h1 class="very-inset">Nice to meet you!</h1>
                         <div class="super-inset">
