--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/jly8dwo.css">
     </head>
     
     <body>
@@ -54,10 +54,15 @@
                 <section class="contact-me">
                     <div class="container">
                         <h2 class="very-inset">Contact Me.</h2>
-                        <div class="super-inset">
-                        <p>
-                            I'm a Computer Science and Engineering student at Santa Clara University with a passion for design and technology.
-                        </p>
+                        <div class="contact-links">
+                            <ul>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/kayla-huffman-b52a91172/">LinkedIn</a>
+                                </li>
+                                <li class="current">
+                                    <a href="mailto: khuffman@scu.edu">Email</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </section>
