--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/jly8dwo.css">
     </head>
     <body>
         <div class="outer-container"> 
@@ -40,21 +40,34 @@
                 <div class="container">
                     <h1 class="very-inset">Projects</h1>
                     <div class="super-inset">
-                        <p>Outside of school, I enjoy exercising my creativity, exploring the outdoors, and staying active. Through this page, I hope you'll get an idea of who I am when screens are off.</p>
+                        <p>Take a look at some of my most recent work!</p>
                     </div>
                 </div>
             </section>
-            <section class="projects projects-grid double-line">
+            <section class="projects-preview projects-grid">
                 <div class="container">
                     <ul>
                         <li>
-                            <a href="mobileSCU.html"></a>
-                            <div class="image-container">
-                                <img src="/Images/olive.jpg" alt>
-                            </div>
+                            <a href="mobileSCU.html">
+                                <div class="image-container">
+                                    <img src="./Images/incoming-home.png" alt>
+                                </div>
+                                <div class="projects-title">
+                                    <h3>Project: SCU Mobile Redesign<br>Role: Web Applications Assistant</h3>
+                                    <!--<span class="link">SEE MORE -> </span>-->
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="ModoLabs.html"></a>
+                            <a href="ModoLabs.html">
+                                <div class="image-container">
+                                    <img src="./Images/seed23.png" alt>
+                                </div>
+                                <div class="projects-title">
+                                    <h3>Project: Modo Labs Prototypes<br>Role: Mobile App Development Intern</h3>
+                                    <!--<span class="link">SEE MORE -> </span>-->
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
